generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum OrderStatus {
  Pending
  Confirmed
  Cancelled
  Refunded
}

enum SessionStatus {
  Scheduled
  Cancelled
  Completed
}

model roles {
  id    Int     @id @default(autoincrement())
  name  String  @unique @db.VarChar(20)
  users users[]
}

model users {
  id            Int       @id @default(autoincrement())
  role_id       Int
  email         String    @unique @db.VarChar(320)
  firstname     String    @db.VarChar(50)
  lastname      String    @db.VarChar(50)
  password_hash String    @db.VarChar(150)
  created_at    DateTime  @default(now()) @db.Timestamp(6)
  updated_at    DateTime  @default(now()) @updatedAt @db.Timestamp(6)
  deleted_at    DateTime? @db.Timestamp(6)

  // relations
  role           roles          @relation(fields: [role_id], references: [id], onDelete: Restrict, onUpdate: NoAction)
  refresh_tokens RefreshToken[]
  orders         orders[]
}

model RefreshToken {
  id         Int      @id @default(autoincrement())
  token_id   String   @unique @db.VarChar(64)
  token_hash String   @db.Text
  user_id    Int
  issued_at  DateTime @default(now()) @db.Timestamp(6)
  expired_at DateTime @db.Timestamp(6)

  user users @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@map("refresh_token")
}

model categories {
  id             Int       @id @default(autoincrement())
  title          String    @db.VarChar(120)
  slug           String    @unique @db.VarChar(120)
  description    String?   @db.Text
  image_filename String?   @db.VarChar(50)
  created_at     DateTime  @default(now()) @db.Timestamp(6)
  updated_at     DateTime  @default(now()) @updatedAt @db.Timestamp(6)

  activities_categories activities_categories[]
}

model activities {
  id             Int       @id @default(autoincrement())
  title          String    @db.VarChar(120)
  slug           String    @unique @db.VarChar(120)
  description    String?   @db.Text
  image_filename String?   @db.VarChar(50)
  created_at     DateTime  @default(now()) @db.Timestamp(6)
  updated_at     DateTime  @default(now()) @updatedAt @db.Timestamp(6)

  activities_categories activities_categories[]
  sessions              sessions[]
}

model activities_categories {
  activity_id Int
  category_id Int

  activity activities @relation(fields: [activity_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  category categories @relation(fields: [category_id], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@id([activity_id, category_id])
  @@map("activities_categories")
}

model sessions {
  id          Int           @id @default(autoincrement())
  activity_id Int
  date        DateTime      @db.Timestamp(6)
  capacity    Int
  unit_price  Decimal       @db.Decimal(5, 2)
  status      SessionStatus
  created_at  DateTime      @default(now()) @db.Timestamp(6)
  updated_at  DateTime      @default(now()) @updatedAt @db.Timestamp(6)

  // relations
  activity     activities     @relation(fields: [activity_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  orders_lines orders_lines[]

  @@index([activity_id], map: "idx_session_activity_id")
}

model orders {
  id             Int           @id @default(autoincrement())
  user_id        Int
  user           users         @relation(fields: [user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  taxes          Decimal       @default(0) @db.Decimal(4, 2)
  total_amount   Decimal       @db.Decimal(10, 2)
  payment_method String?       @db.VarChar(30)
  payment_date   DateTime?     @db.Timestamp(6)
  status         OrderStatus
  created_at     DateTime      @default(now()) @db.Timestamp(6)
  updated_at     DateTime      @default(now()) @updatedAt @db.Timestamp(6)
  deleted_at     DateTime?     @db.Timestamp(6)
  orders_lines   orders_lines[]
}

model orders_lines {
  id          Int      @id @default(autoincrement())
  order_id    Int
  session_id  Int
  tickets_qty Int
  amount      Decimal  @db.Decimal(10, 2)
  created_at  DateTime @default(now()) @db.Timestamp(6)
  updated_at  DateTime @default(now()) @updatedAt @db.Timestamp(6)

  // relations
  order   orders   @relation(fields: [order_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  session sessions @relation(fields: [session_id], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@unique([order_id, session_id], map: "order_session")
}
